--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
 <!--[if IE 7 ]>    <html lang="en" class="ie7">    <![endif]-->
 <!--[if IE 8 ]>    <html lang="en" class="ie8">    <![endif]-->
 <!--[if IE 9 ]>    <html lang="en" class="ie9">    <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--><html lang="ru"><!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>EDUCAMPUS | About Us</title>
+        <title>ШКОЛА 77</title>
 
         <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
         <link href='fonts/Lato-Medium.css' rel='stylesheet' type='text/css'>
@@ -58,10 +58,10 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-2">
                             <div class="logo">
-                                <a href="index.html"><img src="img/icon_cap.png" alt="">Edu<span>campus</span></a>
+                                <a href="index.html"><img src="img/icon_cap.png" alt="">МБОУ СОШ 77</a>
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                        <span class="sr-only">Toggle navigation</span>
+                                        <span class="sr-only">Какая-то навигация</span>
                                         <span class="icon-bar"></span>
                                         <span class="icon-bar"></span>
                                         <span class="icon-bar"></span>
@@ -73,13 +73,13 @@
                             <nav class="main_menu">
                                 <div class="navbar-collapse collapse"> 
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li class="current_page_item"><a href="about.html">About</a></li>
-                                        <li><a href="courses.html">Courses</a></li>
-                                        <li><a href="events.html">Events</a></li>
-                                        <li><a href="news.html">News</a></li>
-                                        <li><a href="alumni.html">Alumni</a></li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li class="current_page_item"><a href="index.html">ГЛАВНАЯ</a></li>
+                                        <li><a href="about.html">О ШКОЛЕ</a></li>
+                                        <!-- <li><a href="courses.html">РАСПИСАНИЕ</a></li> -->
+                                        <li><a href="events.html">МЕРОПРИЯТИЯ</a></li>
+                                        <li><a href="news.html">НОВОСТИ</a></li>
+                                        <!-- <li><a href="alumni.html">Alumni</a></li> -->
+                                        <li><a href="contact.html">КОНТАКТЫ</a></li>
                                     </ul>                                                     
                                 </div>
                             </nav>
@@ -98,7 +98,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="breadcrumb_title section-padding">
-                            <h2>About us</h2>
+                            <h2>Об учебном заведении</h2>
                         </div>
                     </div>
                 </div>
@@ -108,12 +108,12 @@
                     <div class="row">
                         <div class="breadcrumb_nav">
                             <div class="col-sm-5">
-                                <h2>About Us</h2>
+                                <h2>Информация</h2>
                             </div>
                             <div class="col-sm-7">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>About Us</li>
+                                    <li><a href="index.html">Главная страница</a></li>
+                                    <li>О школе</li>
                                 </ul>
                             </div>
                         </div>
@@ -127,8 +127,8 @@
                 <div class="row">
                     <div class="col-md-6 section-padding od_bg1">
                         <div class="our_degrees_txt">
-                            <h2>Welcome To Our University</h2>
-                            <p>when the odds are against him and their dangers work to do. You bet your life Speed Racer he will see it through. Well we're movin' on up to the east side. To a deluxe apartment in the sky. So this is the tale of our castaways</p>
+                            <h2>Добро пожаловать в нашу школу</h2>
+                            <p>тут мы вместо уроков кидаем снег</p>
                         </div>
                     </div>
                     <div class="col-md-6 section-padding od_bg2">
@@ -141,8 +141,8 @@
                                 </div>
                                 <div class="col-sm-9 fix_p">
                                     <div class="sing_degree_txt">
-                                        <h2>Associate’s Degree</h2>
-                                        <p>You would see the biggest gift would be from me and the card attached would say thank you for being a friend.</p>
+                                        <h2>Тут вы можете получить знания</h2>
+                                        <p>у вас обязательно получится!</p>
                                     </div>
                                 </div>
                             </div>
@@ -154,8 +154,8 @@
                                 </div>
                                 <div class="col-sm-9 fix_p">
                                     <div class="sing_degree_txt">
-                                        <h2>Bachelor’s Degree</h2>
-                                        <p>On your mark get set and go now. Got a dream and we just know now we're gonna make our dream come true. </p>
+                                        <h2>Соблюдайте правила</h2>
+                                        <p>выкидывать чужие портфели в окно нельзя! </p>
                                     </div>
                                 </div>
                             </div>
@@ -167,8 +167,8 @@
                                 </div>
                                 <div class="col-sm-9 fix_p">
                                     <div class="sing_degree_txt">
-                                        <h2>Master’s Degree</h2>
-                                        <p>Just sit right back and you'll hear a tale a tale of a fateful trip that started from this tropic port aboard this tiny ship.</p>
+                                        <h2>Тут ты можешь стать настоящим ♂master♂</h2>
+                                        <p>главное много работать в ♂dungeon♂</p>
                                     </div>
                                 </div>
                             </div>
@@ -183,21 +183,24 @@
                 <div class="row">
                     <div class="col-md-5">
                         <div class="why_choose_us_photo">
-                            <img src="img/why_choose_us_photo.jpg" alt="">
+                            <img src="img/main/человек-какает.jpg" alt="" class="why_our_school">
                         </div>
                     </div>
                     <div class="col-md-7">
                         <div class="why_choose_us_txt">
-                            <h1>Why Choose Us ?</h1>
-                            <p>The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the millionaire and his wife. These days are all Happy and Free. These days are all share them with me.</p>
-                            <p>It's time to put on makeup. It's time to dress up right. It's time to raise the curtain on the Muppet Show tonight. </p>
+                            <h1>Почему ты должен выбрать эту школу?</h1>
+                            <p>Чтобы стать настоящим ♂master♂ надо много работать</p>
+                            <p>поэтому работай у нас в ♂dungeon♂ </p>
+                            <br>
+                            <p>Ниже приведены некоторые достоинства школы</p>
+                            <p>вопросы?</p>
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="single_why_choose">
                                         <div class="single_why_choose_icon">
                                             <img src="img/icon_why_choose_1.png" alt="">
                                         </div>
-                                        <h3>Experienced Faculty</h3>
+                                        <h3>Раздача на спавне</h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -205,7 +208,7 @@
                                         <div class="single_why_choose_icon">
                                             <img src="img/icon_why_choose_2.png" alt="">
                                         </div>
-                                        <h3>Popular Courses</h3>
+                                        <h3>AWP мид</h3>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -213,7 +216,7 @@
                                         <div class="single_why_choose_icon">
                                             <img src="img/icon_why_choose_3.png" alt="">
                                         </div>
-                                        <h3>Guaranteed Career</h3>
+                                        <h3>Можно играть в BRAWL!</h3>
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +226,7 @@
             </div>
         </section>
         
-        <section class="priciples_and_practices_area section-padding">
+        <!-- <section class="priciples_and_practices_area section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -495,7 +498,7 @@ more than the law will allow.</p>
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
         <!-- jQuery Latest version -->
         <script src="js/vendor/jquery.1.11.1.js"></script>
