--- a/about.html
+++ b/about.html
@@ -73,8 +73,8 @@
                             <nav class="main_menu">
                                 <div class="navbar-collapse collapse"> 
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li class="current_page_item"><a href="index.html">ГЛАВНАЯ</a></li>
-                                        <li><a href="about.html">О ШКОЛЕ</a></li>
+                                        <li><a href="index.html">ГЛАВНАЯ</a></li>
+                                        <li class="current_page_item"><a href="about.html">О ШКОЛЕ</a></li>
                                         <!-- <li><a href="courses.html">РАСПИСАНИЕ</a></li> -->
                                         <li><a href="events.html">МЕРОПРИЯТИЯ</a></li>
                                         <li><a href="news.html">НОВОСТИ</a></li>
