fix titles, готова страница events

--- a/events.html
+++ b/events.html
@@ -9,7 +9,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>EDUCAMPUS | Events</title>
+        <title>ШКОЛА 77 | МЕРОПРИЯТИЯ</title>
 
         <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
         <link href='fonts/Lato-Medium.css' rel='stylesheet' type='text/css'>
@@ -58,7 +58,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-2">
                             <div class="logo">
-                                <a href="index.html"><img src="img/icon_cap.png" alt="">Edu<span>campus</span></a>
+                                <a href="index.html"><img src="img/icon_cap.png" alt="">МБОУ СОШ 77</a>
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                         <span class="sr-only">Toggle navigation</span>
@@ -73,13 +73,13 @@
                             <nav class="main_menu">
                                 <div class="navbar-collapse collapse"> 
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="courses.html">Courses</a></li>
-                                        <li class="current_page_item"><a href="events.html">Events</a></li>
-                                        <li><a href="news.html">News</a></li>
-                                        <li><a href="alumni.html">Alumni</a></li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="index.html">ГЛАВНАЯ</a></li>
+                                        <li><a href="about.html">О ШКОЛЕ</a></li>
+                                        <!-- <li><a href="courses.html">Courses</a></li> -->
+                                        <li class="current_page_item"><a href="events.html">МЕРОПРИЯТИЯ</a></li>
+                                        <li><a href="news.html">НОВОСТИ</a></li>
+                                        <!-- <li><a href="alumni.html">Alumni</a></li> -->
+                                        <li><a href="contact.html">КОНТАКТЫ</a></li>
                                     </ul>                                                     
                                 </div>
                             </nav>
@@ -98,7 +98,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="breadcrumb_title section-padding">
-                            <h2>Events</h2>
+                            <h2>Мероприятия</h2>
                         </div>
                     </div>
                 </div>
@@ -108,12 +108,12 @@
                     <div class="row">
                         <div class="breadcrumb_nav">
                             <div class="col-sm-5">
-                                <h2>Events</h2>
+                                <h2>Мероприятия</h2>
                             </div>
                             <div class="col-sm-7">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>Events</li>
+                                    <li><a href="index.html">Главная</a></li>
+                                    <li>Мероприятия</li>
                                 </ul>
                             </div>
                         </div>
@@ -122,7 +122,14 @@
             </div>
         </section>
         
-        <section class="upcoming_events_area section-padding">
+        <section>
+            <div class="none-events">
+                <h2>Ну и ну!</h2>
+                <p>...кажется мероприятий нет</p>
+                <p>(вы разочаровать партия, минус второй миска рис!)</p>
+            </div>
+        </section>
+        <!-- <section class="upcoming_events_area section-padding">
             <div class="container">
                 <div class="row">
                     <div class="all_events_box">
@@ -408,7 +415,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
         <!-- jQuery Latest version -->
         <script src="js/vendor/jquery.1.11.1.js"></script>
