--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ШКОЛА 77</title>
+        <title>ШКОЛА 77 | О ШКОЛЕ</title>
 
         <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
         <link href='fonts/Lato-Medium.css' rel='stylesheet' type='text/css'>
