--- a/about.html
+++ b/about.html
@@ -192,8 +192,8 @@
                             <p>Чтобы стать настоящим ♂master♂ надо много работать</p>
                             <p>поэтому работай у нас в ♂dungeon♂ </p>
                             <br>
-                            <p>Ниже приведены некоторые достоинства школы</p>
-                            <p>вопросы?</p>
+                            <p>Ниже приведены некоторые достоинства школы.</p>
+                            <p>Вопросы?</p>
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="single_why_choose">
