--- a/contact.html
+++ b/contact.html
@@ -73,13 +73,13 @@
                             <nav class="main_menu">
                                 <div class="navbar-collapse collapse"> 
                                     <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="courses.html">Courses</a></li>
-                                        <li><a href="events.html">Events</a></li>
-                                        <li><a href="news.html">News</a></li>
-                                        <li><a href="alumni.html">Alumni</a></li>
-                                        <li class="current_page_item"><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="index.html">ГЛАВНАЯ</a></li>
+                                        <li><a href="about.html">О ШКОЛЕ</a></li>
+                                        <!-- <li><a href="courses.html">Courses</a></li> -->
+                                        <li><a href="events.html">МЕРОПРИЯТИЯ</a></li>
+                                        <li><a href="news.html">НОВОСТИ</a></li>
+                                        <!-- <li><a href="alumni.html">Alumni</a></li> -->
+                                        <li class="current_page_item"><a href="contact.html">КОНТАКТЫ</a></li>
                                     </ul>                                                     
                                 </div>
                             </nav>
@@ -98,7 +98,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="breadcrumb_title section-padding">
-                            <h2>Contact Us</h2>
+                            <h2>Контакты</h2>
                         </div>
                     </div>
                 </div>
@@ -108,12 +108,12 @@
                     <div class="row">
                         <div class="breadcrumb_nav">
                             <div class="col-sm-5">
-                                <h2>Contact Us</h2>
+                                <h2>Контакты</h2>
                             </div>
                             <div class="col-sm-7">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li>Contact Us</li>
+                                    <li><a href="index.html">Главная</a></li>
+                                    <li>Контакты</li>
                                 </ul>
                             </div>
                         </div>
@@ -126,33 +126,33 @@
             <div class="google_map">
                 <div id="map_area"></div>
                 <div class="map_caption">
-                    <h2>How To Reach Us</h2>
+                    <h2>Информация</h2>
                     <div class="row contact_info">
                         <div class="col-sm-4">
                             <ul>
-                                <li><i class="pe-7s-map-marker"></i>09 university</li>
-                                <li>Design Street</li>
-                                <li>Australia</li>
+                                <li><i class="pe-7s-map-marker"></i>Россия</li>
+                                <li>Воронеж, пер. Звёздный</li>
+                                <li>д. 2</li>
                             </ul>
                         </div>
                         <div class="col-sm-4">
                             <ul>
-                                <li><i class="pe-7s-call"></i><a href="tel:+123-456-789-001">+123 456 789 001</a></li>
-                                <li><i class="pe-7s-print"></i><a href="tel:+123-456-789-001">+123 456 789 001</a></li>
+                                <li><i class="pe-7s-call"></i><a href="tel:+123-456-789-001">+7 473 244 08 89</a></li>
+                                <li><i class="pe-7s-print"></i><a href="tel:+123-456-789-001">+7 473 244 08 89</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-4">
                             <ul>
-                                <li><i class="pe-7s-mail"></i><a href="mailto:Info@university.com">Info@university.com</a></li>
+                                <li><i class="pe-7s-mail"></i><a href="mailto:Info@university.com">school77@govvrn.ru</a></li>
                             </ul>
                         </div>
                     </div>
-                    <a href="#"><i class="fa fa-chevron-right"></i>Get The Direction</a>
+                    <a href="#"><i class="fa fa-chevron-right"></i>подробнее</a>
                 </div>
             </div>
         </section>
         
-        <section class="send_us_email_area">
+        <!-- <section class="send_us_email_area">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-offset-6 col-sm-6 fix_p">
@@ -296,14 +296,17 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
         <!-- jQuery Latest version -->
         <script src="js/vendor/jquery.1.11.1.js"></script>
 
         <!-- Google Maps API -->
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
-        <script>
+        <!--  выключил т.к. не нужно -->
+        <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+
+
+        <!-- <script>
             function initialize() {
               var mapOptions = {
                 zoom: 13,
@@ -325,7 +328,7 @@
             }
 
             google.maps.event.addDomListener(window, 'load', initialize);
-        </script> 
+        </script>  -->
 
         <!-- Bootstrap JS -->
         <script src="js/bootstrap.min.js"></script>
