fix title & logo in contact & news

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>EDUCAMPUS | Contact Us</title>
+        <title>ШКОЛА 77 | КОНТАКТЫ</title>
 
         <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
         <link href='fonts/Lato-Medium.css' rel='stylesheet' type='text/css'>
@@ -58,7 +58,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-2">
                             <div class="logo">
-                                <a href="index.html"><img src="img/icon_cap.png" alt="">Edu<span>campus</span></a>
+                                <a href="index.html"><img src="img/icon_cap.png" alt="">МБОУ СОШ 77</a>
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                         <span class="sr-only">Toggle navigation</span>
