--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-2">
                             <div class="logo">
-                                <a href="index.html"><img src="img/icon_cap.png" alt="">Edu<span>campus</span></a>
+                                <a href="index.html"><img src="img/icon_cap.png" alt="">МБОУ СОШ 77</a>
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                         <span class="sr-only">Toggle navigation</span>
