--- a/about.html
+++ b/about.html
@@ -216,7 +216,7 @@
                                         <div class="single_why_choose_icon">
                                             <img src="img/icon_why_choose_3.png" alt="">
                                         </div>
-                                        <h3>Можно играть в BRAWL!</h3>
+                                        <h3>Можно играть в BRAWL STARS!</h3>
                                     </div>
                                 </div>
                             </div>
