fix index, events, about

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                     <div class="col-md-6 section-padding od_bg1">
                         <div class="our_degrees_txt">
                             <h2>Добро пожаловать в нашу школу</h2>
-                            <p>тут мы вместо уроков кидаем снег</p>
+                            <p>тут мы вместо уроков <b>кидаем</b> снег</p>
                         </div>
                     </div>
                     <div class="col-md-6 section-padding od_bg2">
@@ -155,7 +155,7 @@
                                 <div class="col-sm-9 fix_p">
                                     <div class="sing_degree_txt">
                                         <h2>Соблюдайте правила</h2>
-                                        <p>выкидывать чужие портфели в окно нельзя! </p>
+                                        <p>выкидывать чужие портфели в окно <b>нельзя</b>! </p>
                                     </div>
                                 </div>
                             </div>
@@ -167,8 +167,8 @@
                                 </div>
                                 <div class="col-sm-9 fix_p">
                                     <div class="sing_degree_txt">
-                                        <h2>Тут ты можешь стать настоящим ♂master♂</h2>
-                                        <p>главное много работать в ♂dungeon♂</p>
+                                        <h2>Тут ты можешь стать настоящим <b>♂master♂</b> </h2>
+                                        <p>главное много работать в <b>♂dungeon♂</b> </p>
                                     </div>
                                 </div>
                             </div>
@@ -189,8 +189,8 @@
                     <div class="col-md-7">
                         <div class="why_choose_us_txt">
                             <h1>Почему ты должен выбрать эту школу?</h1>
-                            <p>Чтобы стать настоящим ♂master♂ надо много работать</p>
-                            <p>поэтому работай у нас в ♂dungeon♂ </p>
+                            <p>Чтобы стать настоящим <b>♂master♂</b> надо много работать</p>
+                            <p>поэтому работай у нас в <b>♂dungeon♂</b> </p>
                             <br>
                             <p>Ниже приведены некоторые достоинства школы.</p>
                             <p>Вопросы?</p>
@@ -216,7 +216,7 @@
                                         <div class="single_why_choose_icon">
                                             <img src="img/icon_why_choose_3.png" alt="">
                                         </div>
-                                        <h3>Можно играть в BRAWL STARS!</h3>
+                                        <h3>Можно играть в <b>BRAWL STARS</b>!</h3>
                                     </div>
                                 </div>
                             </div>
