--- a/events.html
+++ b/events.html
@@ -125,8 +125,8 @@
         <section>
             <div class="none-events">
                 <h2>Ну и ну!</h2>
-                <p>...кажется мероприятий нет</p>
-                <p>(вы разочаровать партия, минус второй миска рис!)</p>
+                <p>...кажется мероприятий <b>нет</b></p>
+                <p>(вы разочаровать партия, <i>минус</i> второй миска <b>рис</b>!)</p>
             </div>
         </section>
         <!-- <section class="upcoming_events_area section-padding">
