--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="col-md-12">
                         <div class="section_heading">
                             <h1>Наши учителя</h1>
-                            <p>Самые классные преподователи в мире</p>
+                            <p>Самые <i>классные</i> преподователи в мире</p>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                             <div class="sing_course_txt">
                                 <img src="img/icon_course_1.png" alt="" class="course_icon">
                                 <h2>ОБЖ</h2>
-                                <p>Учит как себя вести, если съел не те грибы</p>
+                                <p>Учит как себя вести, если съел не те грибы </p>
                                 <a href="#">Узнать больше <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                             <div class="sing_course_txt">
                                 <img src="img/icon_course_3.png" alt="" class="course_icon">
                                 <h2>Математика</h2>
-                                <p>Учит считать кубки в бравл старс</p>
+                                <p>Учит считать <b>кубки в бравл старс</b></p>
                                 <a href="#">Узнать больше <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                             <div class="sing_course_txt">
                                 <img src="img/icon_course_5.png" alt="" class="course_icon">
                                 <h2>Обществознание</h2>
-                                <p>Она запрещает играть в бравл старс на уроках!!!</p>
+                                <p>Она <b>запрещает играть</b> в бравл старс на уроках!!!</p>
                                 <a href="#">Узнать больше <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                             <div class="sing_course_txt">
                                 <img src="img/icon_course_6.png" alt="" class="course_icon">
                                 <h2>Информатика</h2>
-                                <p>Накрутка кубков в бравл старс, взлом серверов!</p>
+                                <p>Накрутка <b>кубков в бравл старс</b>, взлом серверов!</p>
                                 <a href="#">Узнать больше <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
